# rdict

./: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app/: views.py
app/static/: style.css
app/templates/: favorite_words.html  index.html  index2.html  layout.html
rdict/: asgi.py  settings.py  urls.py  wsgi.py
